<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright 2018 The Chromium Authors. All rights reserved.
     Use of this source code is governed by a BSD-style license that can be
     found in the LICENSE file. -->
<org.chromium.chrome.browser.tasks.tab_management.TabGridIphItemView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/tab_grid_iph_item"
    android:layout_width="match_parent"
    android:layout_height="@dimen/tab_grid_iph_card_height"
    android:layout_marginTop="@dimen/tab_grid_iph_card_padding"
    android:layout_marginBottom="@dimen/tab_grid_iph_card_padding"
    android:background="@color/modern_primary_color">
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/popup_bg">
        <TextView
            android:id="@+id/iph_description"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:layout_marginStart="@dimen/tab_grid_iph_card_padding"
            android:text="@string/iph_drag_and_drop_introduction"
            android:textAppearance="@style/TextAppearance.BlackBodyDefault"
            android:layout_gravity="center"
            android:gravity="center_vertical"/>
        <TextView
            android:id="@+id/show_me_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.5"
            android:text="@string/iph_drag_and_drop_show_me"
            android:textAppearance="@style/TextAppearance.BlueTitle2"
            android:layout_gravity="center"
            android:gravity="center_vertical|end"/>
        <org.chromium.ui.widget.ChromeImageView
            android:id="@+id/close_iph_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            style="@style/BottomToolbarButton"
            android:src="@drawable/btn_close"
            app:tint="@color/standard_mode_tint"
            android:contentDescription="@string/close" />
    </LinearLayout>
</org.chromium.chrome.browser.tasks.tab_management.TabGridIphItemView>
