<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright 2019 The Chromium Authors. All rights reserved.
     Use of this source code is governed by a BSD-style license that can be
     found in the LICENSE file. -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="@dimen/tab_grid_iph_dialog_size"
    android:layout_height="@dimen/tab_grid_iph_dialog_size"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:background="@drawable/popup_bg_tinted"
    android:clickable="true"
    android:focusable="true">
    <ImageView
        android:id="@+id/animation_drawable"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        app:srcCompat="@drawable/iph_drag_and_drop_animated_drawable"
        android:contentDescription="@string/iph_drag_and_drop_content" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:text="@string/iph_drag_and_drop_title"
        android:textAppearance="@style/TextAppearance.BlackHeadline"
        android:gravity="center_vertical" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:text="@string/iph_drag_and_drop_content"
        android:textAppearance="@style/TextAppearance.BlackBodyDefault"
        android:gravity="start" />
    <TextView
        android:id="@+id/iph_drag_and_drop_dialog_close_button"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:text="@string/ok"
        android:textAppearance="@style/TextAppearance.BlueTitle2"
        android:gravity="end" />
</LinearLayout>
